--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav"><div>
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"><b>Books</b></a>
+                    <span class="sr-only">(current)</span>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#shoes">courses</a>
+                    <a class="nav-link" href="#shoes"><b>courses</b></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#backpacks">others</a>
+                    <a class="nav-link" href="#backpacks"><b>others</b></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#subs">blog</a>
+                    <a class="nav-link" href="#subs"><b>Blogs</b></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#subs"><button class="btn1">Sign in </button></a>
